model is reloaded for crack detection

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 
   </head>
   <body>
-    <script src="Crack Detector Model Trainer.js"></script>
+    <script src="Crack Detection.js"></script>
   </body>
 </html>
