renamed sketch.js to Crack Highlighter.js, all cracks are highlighted

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 
   </head>
   <body>
-    <script src="Crack Detection.js"></script>
+    <script src="Crack Highlighter.js"></script>
   </body>
 </html>
